--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Diva's Website</title>
-    </head>
 
-    <body>
-            <!-- Visible HTML elements GO HERE  -->
-            <body>
-                <!-- Visible HTML elements GO HERE  -->
-             </body>
+<head>
+    <title>Diva's Website</title>
+</head>
+
+<body>
+    <!-- Visible HTML elements GO HERE  -->
+    <div>
+        <nav>
+
+        </nav>
+        <main>
+            <!-- Sidebar section -->
             <div>
-<h2>Kevia Smith</h2>
-                <nav>
 
-                </nav>
-                <main>
-                    <body>
-                        <!-- Visible HTML elements GO HERE  -->
-                     </body>
-                </main>
             </div>
-    </body>
+            <!-- Content section -->
+            <div>
+                <h2>Kevia Smith</h2>
+
+            </div>
+
+        </main>
+    </div>
+</body>
+
 </html>
