add index.html and css files

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
              </body>
             <div>
 <h2>Kevia Smith</h2>
+<p> Student at Abramson Sci Academy </p>
+<!-- Interests section -->
+<div>
+    <ul>
+        <li> doing hair</li>
+<li> Going shooping</li>
+<li>cooking</li>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOejltUshGpjQZgz_q9AGsuq-wvh3bvJ3BgQ&usqp=CAU"
+    </ul>
+</div>
                 <nav>
 
                 </nav>
