add index.html and css files

--- a/index.html
+++ b/index.html
@@ -1,34 +1,45 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Diva's Website</title>
-    </head>
+
+<head>
+    <title>Diva's Website</title>
+</head>
+<link rel="stylesheet" href="style.css">
+
+<body>
+    <!-- Visible HTML elements GO HERE  -->
 
     <body>
-            <!-- Visible HTML elements GO HERE  -->
-            <body>
-                <!-- Visible HTML elements GO HERE  -->
-             </body>
+        <!-- Visible HTML elements GO HERE  -->
+        <nav>
+            <h1>Diva's Website</h1>
+            <ul>
+                <li>
+                    <a href="index.html">HOME </a>
+                </li>
+                <li>
+                <a href="portfolio.html">Portfolio</a></li>
+            </ul>
+        </nav>
+        <main>
+            <!--Sidebar section-->
             <div>
-<h2>Kevia Smith</h2>
-<p> Student at Abramson Sci Academy </p>
-<!-- Interests section -->
-<div>
-    <ul>
-        <li> doing hair</li>
-<li> Going shooping</li>
-<li>cooking</li>
-<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOejltUshGpjQZgz_q9AGsuq-wvh3bvJ3BgQ&usqp=CAU"
-    </ul>
-</div>
-                <nav>
-
-                </nav>
-                <main>
-                    <body>
-                        <!-- Visible HTML elements GO HERE  -->
-                     </body>
-                </main>
+                <img
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOejltUshGpjQZgz_q9AGsuq-wvh3bvJ3BgQ&usqp=CAU">
             </div>
+            <div>
+                <h2>Kevia Smith</h2>
+                <p> Student at Abramson Sci Academy </p>
+                <!-- Interests section -->
+                <div>
+                    <ul>
+                        <li> doing hair</li>
+                        <li> Going shooping</li>
+                        <li>cooking</li>
+                    </ul>
+                </div>
+        </main>
+        </div>
     </body>
+
 </html>
