add index.html and css files

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!--Sidebar section-->
             <div>
                 <img
-                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTOejltUshGpjQZgz_q9AGsuq-wvh3bvJ3BgQ&usqp=CAU">
+                    src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.thedivasband.com%2F&psig=AOvVaw1F3l1qFcYOkWW_m6b9dNwY&ust=1694205502836000&source=images&cd=vfe&opi=89978449&ved=0CA0QjRxqFwoTCNi6-sGtmYEDFQAAAAAdAAAAABAD">
             </div>
             <div>
                 <h2>Kevia Smith</h2>
