--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 300px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -30,7 +30,7 @@
 
 	<script>
 		(function(){
-			'use strict'
+			moveBoxTo(boarderWidth)
 			/* global jQuery */
 
 			//////////////////////////////////////////////////////////////////
