add bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -64,6 +64,7 @@
 			// TODO 2 - Variable declarations 
 			var positionx=0
 var points=0
+var speed=10
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -73,7 +74,7 @@ var points=0
 			function update() {
 				moveBoxTo(positionx)
 // When you first create the Variable...
-var positionX = 0;
+var positionX = 10;
 
 // during update... 
 // Frame 1
@@ -101,7 +102,7 @@ moveBoxTo(positionX);
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 0;
+				positionX = 3;
    changeBoxText(1);
    function handleBoxClick() {
     positionX = 0;
@@ -118,7 +119,7 @@ moveBoxTo(positionX);
 };
 
 		};
-		})();
+		
 	</script>
 </body>
 </html>
