--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,7 +15,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 300px;  /* <--- Change me! */
+			left: 0px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -62,9 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var positionx=0
-var points=0
-var speed=10
+			var positionx=0;
+			var points=0;
+			var speed=10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -72,28 +72,15 @@ var speed=10
 			turn it around! 
 			*/
 			function update() {
+				positionX = positionX + speed;
 				moveBoxTo(positionx)
-// When you first create the Variable...
-var positionX = 10;
 
-// during update... 
-// Frame 1
-positionX = 0 + 10;         // positionX = 10
-moveBoxTo(positionX);
-
-// Frame 2
-positionX = 10 + 10;         // positionX = 20
-moveBoxTo(positionX);
-
-// Frame 3
-positionX = 20 + 10;         // positionX = 30
-moveBoxTo(positionX);
-
-// Frame 4
-positionX = 30 + 10;         // positionX = 40
-moveBoxTo(positionX);
-
-// so on...
+				if (positionX > boardWidth){
+					speed = -speed;
+				}
+				if (positionX < 0){
+					speed = -speed;
+				}
 			};
 
 			/* 
@@ -102,23 +89,11 @@ moveBoxTo(positionX);
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX = 3;
-   changeBoxText(1);
-   function handleBoxClick() {
-    positionX = 0;
-	changeBoxText(points);
-	function update() {
-   positionX = positionX + 10;
-   moveBoxTo(positionX);
-};
-}
-
-    // your code to increase the points variable by 1
-
-    changeBoxText(points);
-};
-
-		};
+				positionX =points + 1;
+    			positionX = 0;
+				changeBoxText(points);
+			};
+		});
 		
 	</script>
 </body>
