--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -30,7 +30,7 @@
 
 	<script>
 		(function(){
-			moveBoxTo(boarderWidth)
+			'use strict'
 			/* global jQuery */
 
 			//////////////////////////////////////////////////////////////////
@@ -62,9 +62,9 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var positionx=0;
-			var points=0;
-			var speed=10;
+			var positionX = 0;
+			var points = 0;
+			var speed = 10;
 			
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -89,8 +89,8 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				positionX =points + 1;
-    			positionX = 0;
+				positionX = 0;
+				points = points + 1;
 				changeBoxText(points);
 			};
 		});
