TODO 7 bouncing box

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -90,7 +90,7 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
-				points = points + 1;
+				points = points += 3;
 				changeBoxText(points);
 			};
 		});
